Added panel controller and Bootstrap files.
ADD: Panel controller
Added panel controller to manage the main panel of the app, the one
that shows when the user log in.

ADD: Bootstrap files & theme
Added Bootstrap's less files and Cosmo theme from bootswatch to
make a custom and modern UI.

MODIFY: Gemfile
Modified the Gemfile to add less compiler gem and twbs_less_rails

ADD: Rails bootstrap helper
Used to show flash messages and alerts with bootstrap style.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,4 +1,7 @@
 /*
+ *= stub bootstrap-cosmo/bootswatch
+ *= stub bootstrap-cosmo/variables
+ *= require twbs
  *= require_tree .
  *= require_self
  */
