--- a/app/views/application/_navbar.erb
+++ b/app/views/application/_navbar.erb
@@ -1,34 +1,34 @@
 <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
   <div class="container-fluid">
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
+        <span class="sr-only"><%= t("ui.navbar.toggle_navigation") %></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><%= image_tag "ui/navbar_logo.png" %></a>
+      <%= link_to image_tag("ui/navbar_logo.png", :title => t("ui.navbar.logo_text")), root_path(), :class => "navbar-brand" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+    <div class="collapse navbar-collapse" id="navbar-collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Hosts</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Status pages</a></li>
-        <li><a href="#">Incidents</a></li>
-        <li><a href="#">Monitoring</a></li>
-        <li><a href="#">Alerts</a></li>
-        <li><a href="#">Users</a></li>
+        <li<% if params[:controller] == "panel" %> class="active"<% end %>><%= link_to t("ui.navbar.sections.home"), root_path() %></li>
+        <li><a href="#"><%= t("ui.navbar.sections.hosts") %></a></li>
+        <li><a href="#"><%= t("ui.navbar.sections.services") %></a></li>
+        <li><a href="#"><%= t("ui.navbar.sections.status_pages") %></a></li>
+        <li><a href="#"><%= t("ui.navbar.sections.incidents") %></a></li>
+        <li><a href="#"><%= t("ui.navbar.sections.monitoring") %></a></li>
+        <li><a href="#"><%= t("ui.navbar.sections.alerts") %></a></li>
+        <li><a href="#"><%= t("ui.navbar.sections.users") %></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">User <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Preferences</a></li>
+            <li><a href="#"><%= t("ui.navbar.user.preferences") %></a></li>
             <li class="divider"></li>
-            <li><a href="#">Log out</a></li>
+            <li><a href="#"><%= t("ui.navbar.user.log_out") %></a></li>
           </ul>
         </li>
       </ul>
