--- a/app/views/application/_navbar.erb
+++ b/app/views/application/_navbar.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <%= link_to image_tag("ui/navbar_logo.png", :title => t("ui.navbar.logo_text")), root_path(), :class => "navbar-brand" %>
+      <%= link_to image_tag("ui/logo_navbar.png", :title => t("ui.navbar.logo_text")), root_path(), :class => "navbar-brand" %>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
