--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -22,7 +22,7 @@
     <meta name="msapplication-TileColor" content="#2780e3">
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
 
-    <%= stylesheet_link_tag    'application', media: 'all'  %>
+    <%= stylesheet_link_tag    'devise', media: 'all'  %>
     <%= javascript_include_tag 'application' %>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -35,9 +35,7 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <%= render :partial => "navbar" %>
-
-    <div class="container-fluid">
+    <div class="main-container container">
       <%= yield %>
     </div>
   </body>
