Configured login, logout and the recovery of an account's password
MODIFY: Login
Modified login to work properly.

MODIFY: Devise layout
Modified to meet the needs (the logo on all pages, alert messages,
etc.)

MODIFY: Logout and navbar links
Added logout functionality to the navbar of the main UI. Also added
the user's name, avatar, and some fancy icons to the dropdown options.

MODIFY: Recovery of an account's password process
Modified the views for request a change and do the change.
Also modified the e-mail content and added to i18n files to support
full traductions.

--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -36,6 +36,8 @@
   </head>
   <body>
     <div class="main-container container">
+      <%= image_tag "ui/logo_medium.png", :class => "logo", :title => "Watchr" %>
+      <%= bootstrap_flash %>
       <%= yield %>
     </div>
   </body>
