--- a/app/views/layouts/email.html.erb
+++ b/app/views/layouts/email.html.erb
@@ -10,7 +10,7 @@
       </div>
       <hr size="1" style="padding:0;margin:0;"/>
       <div id="footer" style="margin:10px 5px;font-style:italic; font-size:12px">
-        <%= t("ui.email.footer_text") %> <%= link_to "Watchr", root_url() %>.
+        <%= t("email.footer_text") %> <%= link_to "Watchr", root_url() %>.
       </div>
     </div>
   </body>
