--- a/app/assets/stylesheets/devise.css.sass
+++ b/app/assets/stylesheets/devise.css.sass
@@ -14,9 +14,9 @@ div.main-container
   margin-top: 8%
 
   img.logo
-    margin: 0px
+    margin: 15px 0px
     padding: 0px
     max-width: 300px
 
   form
-    margin-top: 30px
+    margin-top: 15px
