--- a/app/assets/stylesheets/ui/navbar.sass
+++ b/app/assets/stylesheets/ui/navbar.sass
@@ -4,3 +4,9 @@
 
     img
       max-height: 30px
+
+  li.user-dropdown
+    img
+      padding: 1px
+      border: 1px solid white
+      margin: -14px 10px -10px 0px
