--- a/app/views/application/_navbar.erb
+++ b/app/views/application/_navbar.erb
@@ -23,12 +23,12 @@
         <li><a href="#"><%= t("ui.navbar.sections.users") %></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">User <span class="caret"></span></a>
+        <li class="dropdown user-dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= image_tag current_user.avatar_url(25), :alt => current_user.name, :title => current_user.name%><%= current_user.name %> <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#"><%= t("ui.navbar.user.preferences") %></a></li>
+            <li><a href="#"><%= "<i class='fa fa-cog'></i>&nbsp;&nbsp;".html_safe+t("ui.navbar.user.preferences") %></a></li>
             <li class="divider"></li>
-            <li><a href="#"><%= t("ui.navbar.user.log_out") %></a></li>
+            <li><%= link_to "<i class='fa fa-sign-out'></i>&nbsp;&nbsp;".html_safe+t("ui.navbar.user.log_out"), destroy_user_session_path(), :method => :delete %></li>
           </ul>
         </li>
       </ul>
