--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,16 +1,21 @@
-<h2>Change your password</h2>
+<div class="alert bg-primary">
+  <%= t("devise.password.edit.text").html_safe %>
+</div>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
   <%= f.hidden_field :reset_password_token %>
 
-  <div><%= f.label :password, "New password" %><br />
-    <%= f.password_field :password, autofocus: true, autocomplete: "off" %></div>
+  <div class="form-group">
+    <%= f.password_field :password, :autocomplete => "off", :class => "form-control", :placeholder => t("devise.password.edit.password_placeholder") %>
+  </div>
 
-  <div><%= f.label :password_confirmation, "Confirm new password" %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %></div>
+  <div class="form-group">
+    <%= f.password_field :password_confirmation, :autocomplete => "off", :class => "form-control", :placeholder => t("devise.password.edit.password_confirmation_placeholder") %>
+  </div>
 
-  <div><%= f.submit "Change my password" %></div>
+  <div class="form-group">
+    <%= f.submit t("devise.password.edit.change_password"), :class => "btn btn-primary btn-block" %>
+  </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%= link_to "<i class='fa fa-chevron-left'></i>&nbsp;&nbsp;".html_safe+t("devise.password.edit.back_login"), new_session_path(resource_name) %>
