--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,12 +1,15 @@
-<h2>Forgot your password?</h2>
+<div class="alert bg-primary">
+  <%= t("devise.password.new.text").html_safe %>
+</div>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= devise_error_messages! %>
+  <div class="form-group">
+    <%= f.email_field :email, :autocomplete => "off", :class => "form-control", :placeholder => t("devise.password.new.email_placeholder") %>
+  </div>
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, autofocus: true %></div>
-
-  <div><%= f.submit "Send me reset password instructions" %></div>
+  <div class="form-group">
+    <%= f.submit t("devise.password.new.send_email"), :class => "btn btn-primary btn-block" %>
+  </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%= link_to "<i class='fa fa-chevron-left'></i>&nbsp;&nbsp;".html_safe+t("devise.password.new.back_login"), new_session_path(resource_name) %>
