Added installation process used when there isn't an administrator
ADD: Installation process
Applyed filters to determine when the app need to run the installation
process to create an administrator account.
The process shows a form with required data to create an account.
The password is generated by the system and e-mailed to the user.

ADD: Password generation functionality to User model
Added a function to generate random secure passwords, used at the
moment in the installation process.

--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -6,11 +6,11 @@
   <%= f.hidden_field :reset_password_token %>
 
   <div class="form-group">
-    <%= f.password_field :password, :autocomplete => "off", :class => "form-control", :placeholder => t("devise.password.edit.password_placeholder") %>
+    <%= f.password_field :password, :autocomplete => "off", :class => "form-control", :placeholder => t("devise.password.edit.password_placeholder"), :required => :true %>
   </div>
 
   <div class="form-group">
-    <%= f.password_field :password_confirmation, :autocomplete => "off", :class => "form-control", :placeholder => t("devise.password.edit.password_confirmation_placeholder") %>
+    <%= f.password_field :password_confirmation, :autocomplete => "off", :class => "form-control", :placeholder => t("devise.password.edit.password_confirmation_placeholder"), :required => :true %>
   </div>
 
   <div class="form-group">
