Modified devise functionality to work better
ADD: Notification when the token for password change fails
Now, when an user tries to change his password with an outdated
token, a warning is shown with a button to request a new token.

MODIFY: Added error indicators and requirements to devise views
Added error indicators using devise, indications and Bootstrap classes.
Also, the required fields has been marked to be required by the
browser before the send.

ADD: Title to every page
Added the title of every section to be shown in layouts.

ADD: Devise particular JavaScript
To avoid loading too much unnecesary code when the application
main JS file starts to grown.

--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,15 +1,20 @@
-<div class="alert bg-primary">
-  <%= t("devise.password.edit.text").html_safe %>
+<% content_for :title, t("devise.password.edit.title") %>
+<% if (!resource.errors[:reset_password_token].blank?) %>
+<div class='alert alert-danger'>
+  <%= t("devise.password.edit.error_token.text").html_safe %>
 </div>
+<%= link_to t("devise.password.edit.error_token.button_text"), new_user_password_path(), :class => "btn btn-primary btn-block" %>
+<% else %>
+<b><%= t("devise.password.edit.text").html_safe %></b>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= f.hidden_field :reset_password_token %>
 
-  <div class="form-group">
+  <div class="form-group<% if (!resource.errors[:password].blank?)%> has-error<% end %>">
     <%= f.password_field :password, :autocomplete => "off", :class => "form-control", :placeholder => t("devise.password.edit.password_placeholder"), :required => :true %>
   </div>
 
-  <div class="form-group">
+  <div class="form-group<% if (!resource.errors[:password_confirmation].blank?)%> has-error<% end %>">
     <%= f.password_field :password_confirmation, :autocomplete => "off", :class => "form-control", :placeholder => t("devise.password.edit.password_confirmation_placeholder"), :required => :true %>
   </div>
 
@@ -19,3 +24,4 @@
 <% end %>
 
 <%= link_to "<i class='fa fa-chevron-left'></i>&nbsp;&nbsp;".html_safe+t("devise.password.edit.back_login"), new_session_path(resource_name) %>
+<% end %>
