--- a/app/views/installation/start.html.erb
+++ b/app/views/installation/start.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, t("installation.start.title") %>
 <h2><%= t("installation.start.title") %></h2>
 <b><%= raw t("installation.start.text") %></b>
 <%= form_tag(apply_installation_path(), :method => :post, :class => "form-group") do -%>
