--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= content_for?(:title) ? yield(:title) : "Watchr" %></title>
+    <title><%= content_for?(:title) ? "Watchr - #{yield(:title)}" : "Watchr" %></title>
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
@@ -23,7 +23,7 @@
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
 
     <%= stylesheet_link_tag    'devise', media: 'all'  %>
-    <%= javascript_include_tag 'application' %>
+    <%= javascript_include_tag 'devise' %>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
