Added more descripting error messages
ADD: Detailed error messages in Devise and Installation views.
Now, it shows the requeriments of a password, name and e-mail, so
if something that the user enters doesn't fir the requeriments, the
user can know why the operation fails.

MODIFIED: Name validation rules
The name length now must be between 2 and 30 characters.

--- a/app/views/installation/start.html.erb
+++ b/app/views/installation/start.html.erb
@@ -1,5 +1,16 @@
 <% content_for :title, t("installation.start.title") %>
 <h2><%= t("installation.start.title") %></h2>
+<% if (!@user.errors[:name].blank?) %>
+  <div class="alert alert-danger">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <%= raw t("devise.errors.name_invalid") %>
+  </div>
+<% elsif (!@user.errors[:email].blank?) %>
+  <div class="alert alert-danger">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <%= raw t("devise.errors.email_invalid") %>
+  </div>
+<% end %>
 <b><%= raw t("installation.start.text") %></b>
 <%= form_tag(apply_installation_path(), :method => :post, :class => "form-group") do -%>
   <div class="form-group<% if (!@user.errors[:name].blank?)%> has-error<% end %>">
