--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,10 @@
 <% content_for :title, t("devise.password.new.title") %>
+<% if (!resource.errors[:email].blank?) %>
+  <div class="alert alert-danger">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <%= raw t("devise.errors.email_invalid") %>
+  </div>
+<% end %>
 <b><%= t("devise.password.new.text").html_safe %></b>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
