--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -8,4 +8,10 @@
 
 /* This is used to add padding because the content is behind the top fixed navbar. */
 body
-  padding-top: 51px
+  padding-top: 70px
+
+div.page-header
+  margin-top: 0px
+
+  h1
+    margin-top: 0px
