--- a/app/views/application/_navbar.erb
+++ b/app/views/application/_navbar.erb
@@ -20,13 +20,15 @@
         <li><a href="#"><%= t("ui.navbar.sections.incidents") %></a></li>
         <li><a href="#"><%= t("ui.navbar.sections.monitoring") %></a></li>
         <li><a href="#"><%= t("ui.navbar.sections.alerts") %></a></li>
-        <li><a href="#"><%= t("ui.navbar.sections.users") %></a></li>
+        <% if (current_user.is_administrator?) %>
+          <li><%= link_to t("ui.navbar.sections.users"), users_path() %></li>
+        <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown user-dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= image_tag current_user.avatar_url(25), :alt => current_user.name, :title => current_user.name%><%= current_user.name %> <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#"><%= "<i class='fa fa-cog'></i>&nbsp;&nbsp;".html_safe+t("ui.navbar.user.preferences") %></a></li>
+            <li><%= link_to "<i class='fa fa-cog'></i>&nbsp;&nbsp;".html_safe+t("ui.navbar.user.preferences"), root_path() %></li>
             <li class="divider"></li>
             <li><%= link_to "<i class='fa fa-sign-out'></i>&nbsp;&nbsp;".html_safe+t("ui.navbar.user.log_out"), destroy_user_session_path(), :method => :delete %></li>
           </ul>
