Completed index action for users and added new and create actions
MODIFY: Index view and action
Added search queries in all users or in a certain privilege level users.
Also added information about numer of elements, elements showed and
the search query.

ADD: New and Create actions for UsersController
Now the users can be created filling a form (designed with Bootstrap).

TODO: Error messages in the form users/_form.

--- a/app/assets/stylesheets/ui/sidebar.sass
+++ b/app/assets/stylesheets/ui/sidebar.sass
@@ -1,5 +1,14 @@
+// This file provides CSS styling to the views with sidebar style
+
 div.sidebar
   ul.nav.nav-pills.nav-stacked
     li.disabled
       a
         cursor: default
+
+div.content
+  div.page-header
+    margin-top: 0px
+
+    h1
+      margin-top: 0px
