--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -10,8 +10,9 @@
 body
   padding-top: 70px
 
-div.page-header
-  margin-top: 0px
+img.with-border
+  border: 1px solid white
+  padding: 1px
 
-  h1
-    margin-top: 0px
+  &.color
+    border-color: #2780e3
