--- a/app/assets/stylesheets/ui/navbar.sass
+++ b/app/assets/stylesheets/ui/navbar.sass
@@ -1,3 +1,6 @@
+// This file provides CSS styling to navbar, present in the
+// application when the user is logged in.
+
 .navbar
   margin-bottom: 20px
   
@@ -9,6 +12,4 @@
 
   li.user-dropdown
     img
-      padding: 1px
-      border: 1px solid white
       margin: -14px 10px -10px 0px
