--- a/app/views/application/_navbar.erb
+++ b/app/views/application/_navbar.erb
@@ -26,7 +26,7 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown user-dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= image_tag current_user.avatar_url(25), :alt => current_user.name, :title => current_user.name%><%= current_user.name %> <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= image_tag current_user.avatar_url(25), :alt => current_user.name, :title => current_user.name, :class => "with-border" %><%= current_user.name %> <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><%= link_to "<i class='fa fa-cog'></i>&nbsp;&nbsp;".html_safe+t("ui.navbar.user.preferences"), root_path() %></li>
             <li class="divider"></li>
