--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,6 +11,7 @@
         </small>
       </h1>
     </div>
+    <%= bootstrap_flash %>
     <div class='form-horizontal'>
       <div class="form-group">
         <label for="user_email" class="col-sm-3 control-label"><%= t("users.form.avatar") %></label>
@@ -61,13 +62,13 @@
       <div class="form-group">
         <label for="user_created_at" class="col-sm-3 control-label"><%= t("users.form.current_login") %></label>
         <div class="col-sm-7">
-          <p class="form-control-static"><%= @user.current_sign_in_at.strftime("%d/%m/%Y - %H:%M") %> (IP: <%= @user.current_sign_in_ip %>)</p>
+          <p class="form-control-static"><% if(!@user.current_sign_in_at.blank?) %><%= @user.current_sign_in_at.strftime("%d/%m/%Y - %H:%M") %> (IP: <%= @user.current_sign_in_ip %>)<% end %></p>
         </div>
       </div>
       <div class="form-group">
         <label for="user_created_at" class="col-sm-3 control-label"><%= t("users.form.last_login") %></label>
         <div class="col-sm-7">
-          <p class="form-control-static"><%= @user.last_sign_in_at.strftime("%d/%m/%Y - %H:%M") %> (IP: <%= @user.last_sign_in_ip %>)</p>
+          <p class="form-control-static"><% if(!@user.last_sign_in_at.blank?) %><%= @user.last_sign_in_at.strftime("%d/%m/%Y - %H:%M") %> (IP: <%= @user.last_sign_in_ip %>)<% end %></p>
         </div>
       </div>
       <div class="form-group">
