--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -32,9 +32,24 @@
     </div>
   </div>
   <div class="form-group<% if (!resource.errors[:password].blank?) %> has-error<% end %>">
-    <label for="user_password" class="col-sm-2 control-label"><%= t("users.form.password") %></label>
+    <label for="user_change_password" class="col-sm-2 control-label"><%= t("users.form.password") %></label>
     <div class="col-sm-7">
+      <% if (resource.persisted?) %>
+      <div class="radio">
+        <label>
+          <input type="radio" name="user[change_password]" id="user_change_password" value="false" checked>
+          <%= t("users.form.password_unchanged") %>
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="user[change_password]" id="user_change_password" value="true">
+          <%= t("users.form.password_generated") %>
+        </label>
+      </div>
+      <% else %>
       <p class="form-control-static"><%= t("users.form.password_generated") %></p>
+      <% end %>
     </div>
   </div>
   <div class="form-group<% if (!resource.errors[:level].blank?) %> has-error<% end %>">
