Added page title in UsersController views and the root page.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for :title, t("users.show.title") %>
 <div class='row-fluid'>
   <div class='col-lg-2 col-sm-3 sidebar'>
     <%= render :partial => "sidebar" %>
