Added Preferences view, and changed the sidebars
ADD: Preferences view
Using multiple panes and forms. Also added translations to all the
texts.

MODIFY: Users' sidebar
Added an external box, and changed the column sizes

MODIFY: Some visual bugs
Fixed problems when the users list is showed in a small device.
Also, added a class='active' to the Users element in the navbar
when the UsersController is being used.

--- a/app/views/application/_navbar.erb
+++ b/app/views/application/_navbar.erb
@@ -21,7 +21,7 @@
         <li><a href="#"><%= t("ui.navbar.sections.monitoring") %></a></li>
         <li><a href="#"><%= t("ui.navbar.sections.alerts") %></a></li>
         <% if (current_user.is_normal?) %>
-          <li><%= link_to t("ui.navbar.sections.users"), users_path() %></li>
+          <li<% if (controller_name == "users") %> class="active"<% end %>><%= link_to t("ui.navbar.sections.users"), users_path() %></li>
         <% end %>
       </ul>
       <ul class="nav navbar-nav navbar-right">
