--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,10 @@
 <% content_for :title, t("users.new.title") %>
 <div class='row-fluid'>
-  <div class='col-lg-2 col-sm-3 sidebar'>
-    <%= render :partial => "sidebar", :params => params %>
+  <div class='col-md-3 sidebar'>
+    <%= render :partial => "sidebar" %>
   </div>
-  <div class='col-lg-10 col-sm-9 content'>
-    <div class="page-header">
+  <div class='col-md-9 content'>
+    <div class="page-header clearfix">
       <h1>
         <%= t("users.new.title") %>
         <small>
