--- a/app/views/users/_sidebar.html.erb
+++ b/app/views/users/_sidebar.html.erb
@@ -1,10 +1,14 @@
-<ul class="nav nav-pills nav-stacked">
-  <li class="<% if (action_name == "index" && @level.blank?) %>active<% end %>"><%= link_to t("users.sidebar.all_users"), users_path() %></li>
-</ul>
-<hr class='divider' />
-<ul class="nav nav-pills nav-stacked">
-  <li class='disabled'><a>View by privilege level</a></li>
-  <li class="<% if (action_name == "index" && @level == User::ADMINISTRATOR_USER) %>active<% end %>"><%= link_to t("users.sidebar.administrator_users"), users_path(:level => User::ADMINISTRATOR_USER) %></li>
-  <li class="<% if (action_name == "index" && @level == User::NORMAL_USER) %>active<% end %>"><%= link_to t("users.sidebar.normal_users"), users_path(:level => User::NORMAL_USER) %></li>
-  <li class="<% if (action_name == "index" && @level == User::GUEST_USER) %>active<% end %>"><%= link_to t("users.sidebar.guest_users"), users_path(:level => User::GUEST_USER) %></li>
-</ul>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <ul class="nav nav-pills nav-stacked">
+      <li class="<% if (action_name == "index" && @level.blank?) %>active<% end %>"><%= link_to t("users.sidebar.all_users"), users_path() %></li>
+    </ul>
+    <hr class='divider' />
+    <ul class="nav nav-pills nav-stacked">
+      <li class='disabled'><a>View by privilege level</a></li>
+      <li class="<% if (action_name == "index" && @level == User::ADMINISTRATOR_USER) %>active<% end %>"><%= link_to t("users.sidebar.administrator_users"), users_path(:level => User::ADMINISTRATOR_USER) %></li>
+      <li class="<% if (action_name == "index" && @level == User::NORMAL_USER) %>active<% end %>"><%= link_to t("users.sidebar.normal_users"), users_path(:level => User::NORMAL_USER) %></li>
+      <li class="<% if (action_name == "index" && @level == User::GUEST_USER) %>active<% end %>"><%= link_to t("users.sidebar.guest_users"), users_path(:level => User::GUEST_USER) %></li>
+    </ul>
+  </div>
+</div>
