--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,11 +1,11 @@
 <% content_for :title, t("users.index.title") %>
 <div class='row-fluid'>
-  <div class='col-lg-2 col-sm-3 sidebar'>
+  <div class='col-md-3 sidebar'>
     <%= render :partial => "sidebar" %>
   </div>
-  <div class='col-lg-10 col-sm-9 content'>
+  <div class='col-md-9 content'>
     <%= bootstrap_flash %>
-    <div class="page-header">
+    <div class="page-header clearfix">
       <h1>
         <%= t("users.index.title") %>
         <small>
@@ -42,7 +42,7 @@
             <%= text_field_tag "q", @query, :placeholder => t("ui.table.search_placeholder"), :class => "form-control" %>
           </div>
           <div class="form-group">
-            <%= button_tag "<i class='fa fa-chevron-right'></i>".html_safe, {:type => "submit", :class => "btn btn-primary"} %>
+            <%= button_tag t("ui.table.search"), {:type => "submit", :class => "btn btn-primary"} %>
           </div>
         <% end %>
       </div>
