--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -27,13 +27,13 @@
 <%= form_for resource, :html => {:class => "form-horizontal"} do |f| %>
   <div class="form-group<% if (!resource.errors[:email].blank?) %> has-error<% end %>">
     <label for="user_email" class="col-sm-2 control-label"><%= t("users.form.email") %></label>
-    <div class="col-sm-7">
+    <div class="col-md-7 col-sm-10">
       <%= f.email_field :email, :class => "form-control", :placeholder => t("users.form.email_placeholder"), :required => true %>
     </div>
   </div>
   <div class="form-group<% if (!resource.errors[:password].blank?) %> has-error<% end %>">
     <label for="user_change_password" class="col-sm-2 control-label"><%= t("users.form.password") %></label>
-    <div class="col-sm-7">
+    <div class="col-md-7 col-sm-10">
       <% if (resource.persisted?) %>
       <div class="radio">
         <label>
@@ -54,41 +54,41 @@
   </div>
   <div class="form-group<% if (!resource.errors[:level].blank?) %> has-error<% end %>">
     <label for="user_level" class="col-sm-2 control-label"><%= t("users.form.privilege_level") %></label>
-    <div class="col-sm-7">
+    <div class="col-md-7 col-sm-10">
       <%= f.select :level, options_for_select(levels_hash(), :selected => resource.level), {}, :class => "form-control" %>
     </div>
   </div>
   <div class="form-group">
-    <div class=" col-sm-offset-2 col-sm-7">
+    <div class="col-sm-offset-2 col-md-7 col-sm-10">
       <hr class='divider' />
     </div>
   </div>
   <div class="form-group<% if (!resource.errors[:name].blank?) %> has-error<% end %>">
     <label for="user_name" class="col-sm-2 control-label"><%= t("users.form.name") %></label>
-    <div class="col-sm-7">
+    <div class="col-md-7 col-sm-10">
       <%= f.text_field :name, :class => "form-control", :placeholder => t("users.form.name_placeholder"), :required => true %>
     </div>
   </div>
   <div class="form-group<% if (!resource.errors[:gravatar_email].blank?) %> has-error<% end %>">
     <label for="user_gravatar_email" class="col-sm-2 control-label"><%= t("users.form.gravatar_email") %></label>
-    <div class="col-sm-7">
+    <div class="col-md-7 col-sm-10">
       <%= f.text_field :gravatar_email, :class => "form-control", :placeholder => t("users.form.gravatar_email_placeholder") %>
       <span class="help-block"><%= t("users.form.gravatar_email_helper") %></span>
     </div>
   </div>
   <div class="form-group<% if (!resource.errors[:lang].blank?) %> has-error<% end %>">
     <label for="user_lang" class="col-sm-2 control-label"><%= t("users.form.language") %></label>
-    <div class="col-sm-7">
+    <div class="col-md-7 col-sm-10">
       <%= f.select :lang, options_for_select(languages_hash(), :selected => resource.lang), {}, :class => "form-control" %>
     </div>
   </div>
   <div class="form-group">
-    <div class=" col-sm-offset-2 col-sm-7">
+    <div class="col-sm-offset-2 col-md-7 col-sm-10">
       <hr class='divider' />
     </div>
   </div>
   <div class="form-group">
-    <div class="col-sm-offset-2 col-sm-7">
+    <div class="col-md-offset-2 col-md-7 col-xs-12">
       <%= f.button "#{t("users.#{action_name}.continue")}&nbsp;&nbsp;<i class='fa fa-chevron-right'></i>".html_safe, :type => "submit", :class => "btn btn-primary pull-right" %>
       <%= link_to t("users.new.back"), users_path(:level => @level), :class => "btn btn-default pull-left" %>
     </div>
