--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,9 @@
 <% content_for :title, t("users.new.title") %>
 <div class='row-fluid'>
-  <div class='col-md-3 sidebar'>
+  <div class='col-md-3 col-sm-4 sidebar'>
     <%= render :partial => "sidebar" %>
   </div>
-  <div class='col-md-9 content'>
+  <div class='col-md-9 col-sm-8 content'>
     <div class="page-header clearfix">
       <h1>
         <%= t("users.new.title") %>
