--- a/app/views/users/preferences.html.erb
+++ b/app/views/users/preferences.html.erb
@@ -5,8 +5,8 @@
       <div class="panel-body">
         <!-- Nav tabs -->
         <ul class="nav nav-pills nav-stacked" role="tablist">
-          <li class="active"><a href="#general" role="tab" data-toggle="tab">General</a></li>
-          <li><a href="#password" role="tab" data-toggle="tab">Change password</a></li>
+          <li class="active"><a href="#general" role="tab" data-toggle="tab"><%= t("users.preferences.sidebar.general") %></a></li>
+          <li><a href="#password" role="tab" data-toggle="tab"><%= t("users.preferences.sidebar.change_password") %></a></li>
         </ul>
       </div>
     </div>
