--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,9 @@
 <% content_for :title, t("users.show.title") %>
 <div class='row-fluid'>
-  <div class='col-md-3 sidebar'>
+  <div class='col-md-3 col-sm-4 sidebar'>
     <%= render :partial => "sidebar" %>
   </div>
-  <div class='col-md-9 content'>
+  <div class='col-md-9 col-sm-8 content'>
     <div class="page-header clearfix">
       <h1>
         <%= t("users.show.title") %>
@@ -16,86 +16,86 @@
     <div class='form-horizontal'>
       <div class="form-group">
         <label for="user_email" class="col-sm-3 control-label"><%= t("users.form.avatar") %></label>
-        <div class="col-sm-6">
+        <div class="col-md-7 col-sm-9">
           <%= image_tag @user.avatar_url(100), :title => @user.name, :alt => @user.name %>
         </div>
       </div>
       <div class="form-group">
         <label for="user_email" class="col-sm-3 control-label"><%= t("users.form.email") %></label>
-        <div class="col-sm-7">
+        <div class="col-md-7 col-sm-9">
           <p class="form-control-static"><%= @user.email %></p>
         </div>
       </div>
       <div class="form-group">
         <label for="user_level" class="col-sm-3 control-label"><%= t("users.form.privilege_level") %></label>
-        <div class="col-sm-7">
+        <div class="col-md-7 col-sm-9">
           <p class="form-control-static"><%= t("users.levels.level_#{@user.level}") %></p>
         </div>
       </div>
       <div class="form-group">
-        <div class=" col-sm-offset-3 col-sm-7">
+        <div class="col-sm-offset-3 col-md-7 col-sm-9">
           <hr class='divider' />
         </div>
       </div>
       <div class="form-group">
         <label for="user_name" class="col-sm-3 control-label"><%= t("users.form.name") %></label>
-        <div class="col-sm-7">
+        <div class="col-md-7 col-sm-9">
           <p class="form-control-static"><%= @user.name %></p>
         </div>
       </div>
       <div class="form-group">
         <label for="user_gravatar_email" class="col-sm-3 control-label"><%= t("users.form.gravatar_email") %></label>
-        <div class="col-sm-7">
+        <div class="col-md-7 col-sm-9">
           <p class="form-control-static"><%= @user.gravatar_email %></p>
         </div>
       </div>
       <div class="form-group">
         <label for="user_lang" class="col-sm-3 control-label"><%= t("users.form.language") %></label>
-        <div class="col-sm-7">
+        <div class="col-md-7 col-sm-9">
           <p class="form-control-static"><%= t("languages.#{@user.lang}") %></p>
         </div>
       </div>
       <div class="form-group">
-        <div class=" col-sm-offset-3 col-sm-7">
+        <div class="col-sm-offset-3 col-md-7 col-sm-9">
           <hr class='divider' />
         </div>
       </div>
       <div class="form-group">
         <label for="user_created_at" class="col-sm-3 control-label"><%= t("users.form.current_login") %></label>
-        <div class="col-sm-7">
+        <div class="col-md-7 col-sm-9">
           <p class="form-control-static"><% if(!@user.current_sign_in_at.blank?) %><%= @user.current_sign_in_at.strftime("%d/%m/%Y - %H:%M") %> (IP: <%= @user.current_sign_in_ip %>)<% end %></p>
         </div>
       </div>
       <div class="form-group">
         <label for="user_created_at" class="col-sm-3 control-label"><%= t("users.form.last_login") %></label>
-        <div class="col-sm-7">
+        <div class="col-md-7 col-sm-9">
           <p class="form-control-static"><% if(!@user.last_sign_in_at.blank?) %><%= @user.last_sign_in_at.strftime("%d/%m/%Y - %H:%M") %> (IP: <%= @user.last_sign_in_ip %>)<% end %></p>
         </div>
       </div>
       <div class="form-group">
-        <div class=" col-sm-offset-3 col-sm-7">
+        <div class="col-sm-offset-3 col-md-7 col-sm-9">
           <hr class='divider' />
         </div>
       </div>
       <div class="form-group">
         <label for="user_created_at" class="col-sm-3 control-label"><%= t("users.form.created_at") %></label>
-        <div class="col-sm-7">
+        <div class="col-md-7 col-sm-9">
           <p class="form-control-static"><%= @user.created_at.strftime("%m/%d/%Y - %H:%M") %></p>
         </div>
       </div>
       <div class="form-group">
         <label for="user_created_at" class="col-sm-3 control-label"><%= t("users.form.updated_at") %></label>
-        <div class="col-sm-7">
+        <div class="col-md-7 col-sm-9">
           <p class="form-control-static"><%= @user.updated_at.strftime("%m/%d/%Y - %H:%M") %></p>
         </div>
       </div>
       <div class="form-group">
-        <div class=" col-sm-offset-3 col-sm-7">
+        <div class="col-sm-offset-3 col-md-7 col-sm-9">
           <hr class='divider' />
         </div>
       </div>
       <div class="form-group">
-        <div class="col-sm-offset-3 col-sm-7">
+        <div class="col-md-offset-3 col-md-7 col-sm-12">
           <% if (current_user.is_administrator?) %>
           <div class='pull-right'>
             <%= link_to "<i class='fa fa-pencil'></i>&nbsp;&nbsp;#{t("users.index.button.edit")}".html_safe, edit_user_path(@user), :class => "btn btn-info", :title => t("users.index.button.edit") %>
