Changed the change width of large screens, and adjust the sidebars.
MODIFY: The width of large screens.
As this software is thinked to being used with large screens, the
change point for reescalation has been changed from 1200px to
1500px, so the columns widths can be  assigned better.

MODIFY: Classes of sidebars
Modified to fell better in large screens.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,9 @@
 <% content_for :title, t("users.show.title") %>
 <div class='row-fluid'>
-  <div class='col-md-3 col-sm-4 sidebar'>
+  <div class='col-lg-2 col-md-3 col-sm-4 sidebar'>
     <%= render :partial => "sidebar" %>
   </div>
-  <div class='col-md-9 col-sm-8 content'>
+  <div class='col-lg-10 col-md-9 col-sm-8 content'>
     <div class="page-header clearfix">
       <h1>
         <%= t("users.show.title") %>
