--- a/app/assets/stylesheets/bootstrap-cosmo/variables.css.less
+++ b/app/assets/stylesheets/bootstrap-cosmo/variables.css.less
@@ -285,6 +285,7 @@
 // Large screen / wide desktop
 //** Deprecated `@screen-lg` as of v3.0.1
 @screen-lg:                  1200px;
+@screen-lg:                  1500px;
 @screen-lg-min:              @screen-lg;
 //** Deprecated `@screen-lg-desktop` as of v3.0.1
 @screen-lg-desktop:          @screen-lg-min;
@@ -306,7 +307,7 @@
 // Navbar collapse
 //** Point at which the navbar becomes uncollapsed.
 // @grid-float-breakpoint:     @screen-sm-min;
-@grid-float-breakpoint:     925px;
+@grid-float-breakpoint:     955px;
 //** Point at which the navbar begins collapsing.
 @grid-float-breakpoint-max: (@grid-float-breakpoint - 1);
 
