--- a/app/views/users/preferences.html.erb
+++ b/app/views/users/preferences.html.erb
@@ -1,6 +1,6 @@
 <% content_for :title, t("users.preferences.title") %>
 <div class='row-fluid'>
-  <div class='col-lg-3 col-sm-4 sidebar'>
+  <div class='col-lg-2 col-md-3 col-sm-4 sidebar'>
     <div class="panel panel-default">
       <div class="panel-body">
         <!-- Nav tabs -->
@@ -11,7 +11,7 @@
       </div>
     </div>
   </div>
-  <div class='col-lg-9 col-sm-8 content'>
+  <div class='col-lg-10 col-md-9 col-sm-8 content'>
     <!-- Tab panes -->
     <div class="tab-content">
       <div class="tab-pane active" id="general">
