Finished the preferences saving and added somo HD images
MODIFY: Save process for preferences
Added the functionality to save preferences, checking the current
password and the data entered.
If an error occurred, the modify form is shown again with information
of the error.

ADD: Some HD images
Added the logo images in Retina format for Apple devices (2x resolution).

--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -13,7 +13,7 @@
   <% elsif (!resource.errors[:password_confirmation].blank?) %>
     <div class="alert alert-danger">
       <button type="button" class="close" data-dismiss="alert">&times;</button>
-      <%= raw t("users.error.password_repeat_invalid") %>
+      <%= raw t("users.error.password_confirmation_invalid") %>
     </div>
   <% end %>
   <b><%= t("devise.password.edit.text").html_safe %></b>
