--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -55,7 +55,12 @@
   <div class="form-group<% if (!resource.errors[:level].blank?) %> has-error<% end %>">
     <label for="user_level" class="col-sm-2 control-label"><%= t("users.form.privilege_level") %></label>
     <div class="col-md-7 col-sm-10">
-      <%= f.select :level, options_for_select(levels_hash(), :selected => resource.level), {}, :class => "form-control" %>
+      <% if (resource.id != current_user.id) %>
+        <%= f.select :level, options_for_select(levels_hash(), :selected => resource.level), {}, :class => "form-control" %>
+      <% else %>
+        <p class="form-control-static"><%= t("users.levels.level_#{resource.level}") %></p>
+        <span class="help-block"><%= t("users.form.privilege_level_yourself") %></span>
+      <% end %>
     </div>
   </div>
   <div class="form-group">
