--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -99,7 +99,16 @@
           <% if (current_user.is_administrator?) %>
           <div class='pull-right'>
             <%= link_to "<i class='fa fa-pencil'></i>&nbsp;&nbsp;#{t("users.index.button.edit")}".html_safe, edit_user_path(@user), :class => "btn btn-info", :title => t("users.index.button.edit") %>
-            <%= link_to "<i class='fa fa-trash-o'></i>&nbsp;&nbsp;#{t("users.index.button.destroy")}".html_safe, user_path(@user), :method => :delete, :class => "btn btn-danger", :data => {:confirm => t("users.index.button.destroy_confirmation")} %>
+            <% if (@user.id != current_user.id) %>
+            <%= link_to "<i class='fa fa-trash-o'></i>&nbsp;&nbsp;#{t("users.index.button.destroy")}".html_safe, user_path(@user), :method => :delete, :class => "btn btn-danger", :title => t("users.index.button.destroy"), :data => {:confirm => t("users.index.button.destroy_confirmation")} %>
+            <% else %>
+            <%= link_to "<i class='fa fa-trash-o'></i>&nbsp;&nbsp;#{t("users.index.button.destroy")}".html_safe, nil, :class => "btn btn-danger disabled", :title => t("users.index.button.destroy")%>
+            <% end %>
+          </div>
+          <% else %>
+          <div class='pull-right'>
+            <%= link_to "<i class='fa fa-pencil'></i>&nbsp;&nbsp;#{t("users.index.button.edit")}".html_safe, nil, :class => "btn btn-info disabled", :title => t("users.index.button.edit") %>
+            <%= link_to "<i class='fa fa-trash-o'></i>&nbsp;&nbsp;#{t("users.index.button.destroy")}".html_safe, nil, :class => "btn btn-danger disabled", :title => t("users.index.button.destroy")%>
           </div>
           <% end %>
           <%= link_to t("users.new.back"), users_path(:level => @level), :class => "btn btn-default pull-left" %>
