Added custom (and translated) error pages.
ADD: Custom error pages
Added custom error pages managed by the ApplicationController.
The error pages are fully translated and contains a kitten that
makes them so special <3.

MODIFY: Layouts
Changed to specify in the html tag the correct language based in the
location used in Rails.

DELETE: Unused JS and CSS files

ADD: CSS and JS file for error pages.
Added also to the list of precompilation assets to make them available
in production.

--- a/app/views/layouts/error.html.erb
+++ b/app/views/layouts/error.html.erb
@@ -22,8 +22,8 @@
     <meta name="msapplication-TileColor" content="#2780e3">
     <meta name="msapplication-TileImage" content="/mstile-144x144.png">
 
-    <%= stylesheet_link_tag    'devise', media: 'all'  %>
-    <%= javascript_include_tag 'devise' %>
+    <%= stylesheet_link_tag    'error', media: 'all'  %>
+    <%= javascript_include_tag 'error' %>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -35,10 +35,11 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <div class="main-container container">
-      <%= image_tag "ui/logo_medium.png", :class => "logo", :title => "Watchr" %>
-      <%= bootstrap_flash %>
-      <%= yield %>
+   <div class="container">
+      <div class='error-div'>
+        <%= image_tag "cat.jpg", :class => "cat" %>
+        <%= yield %>
+      </div>
     </div>
   </body>
 </html>
